Fix a problem with the tabs jumping around the page depending upon which is pressed.

--- a/static/calculator.css
+++ b/static/calculator.css
@@ -1,11 +1,13 @@
 /* Align the tabs to the center of the page. */
 .tab-container {
     align-self: center;
+    margin-top: 15%;
+    margin-bottom: 15%;
 }
 
 /* Fix error with the form jumping around during use */
-.content-container content-block {
-    align-self: start;   
+div.body-container {
+    align-items: start;
 }
 
 /* Set up border for the tabs */
